# cookie-lib

./: CMakeLists.txt  Makefile
include/: cookie_bool.h  cookie_memory.h  cookie_string.h
sources/cookie_string/: converter.c  strcmp.c  strdup.c  strlen.c
sources/memory/: calloc.c  free.c  malloc.c  memchr.c  memcmp.c  memcopy.c  memdup.c  memmove.c  memory_manager.c  memset.c
sources/string/: putchar.c  putstr.c  strcat.c  strchr.c  strcmp.c  strcopy.c  strcspn.c  strdup.c  strjoin.c  strlen.c  strmove.c  strpbrk.c  strstr.c
sources_test/: main.c  test.c  test.h
sources_test/cookie_string/: converter.c  strcmp.c  strdup.c
sources_test/memory/: calloc.c  memchr.c  memcmp.c  memset.c
sources_test/string/: putchar.c  putstr.c  strcmp.c  strdup.c  strlen.c
test/: main.c  test.h
test/string/: putchar.c  putstr.c  strcmp.c
